force-app/main/default/objects/Lead/fields/Account_DN__c.field-meta.xml
<CustomField>
    <fullName>Account_DN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Account)</relationshipLabel>
    <relationshipName>DN_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>