force-app/main/default/objects/Lead/fields/Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Date__c</fullName>
    <description>Date lead was retrieved in date/format</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Acquisition Date</label>
    <type>DateTime</type>
</CustomField>