force-app/main/default/objects/Lead/fields/Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Line 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>