force-app/main/default/objects/Lead/fields/AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>AddressLine1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hospital Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>