force-app/main/default/objects/Lead/fields/AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>AddressLine2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hospital Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>