force-app/main/default/objects/Lead/fields/AddressLine3__c.field-meta.xml
<CustomField>
    <fullName>AddressLine3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hospital AddressLine 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>