force-app/main/default/objects/Lead/fields/Adoption_Date__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Adoption Date</label>
    <type>DateTime</type>
</CustomField>