force-app/main/default/objects/Lead/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <inlineHelpText>Please select one below</inlineHelpText>
    <label>Age</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30-44</fullName>
                <default>true</default>
                <label>30-44</label>
            </value>
            <value>
                <fullName>45-55</fullName>
            </value>
            <value>
                <fullName>56-70</fullName>
            </value>
            <value>
                <fullName>71 and older</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>