force-app/main/default/objects/Lead/fields/Annual_Cases__c.field-meta.xml
<CustomField>
    <fullName>Annual_Cases__c</fullName>
    <description>Indicates annualized number cases</description>
    <label>Annualized Cases</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>