force-app/main/default/objects/Lead/fields/Area_of_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Inquiry__c</fullName>
    <label>Area of Inquiry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grants and Donations</fullName>
            </value>
            <value>
                <fullName>Local Community Grants</fullName>
            </value>
            <value>
                <fullName>Accounts - Payable</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Surgical Sales</fullName>
            </value>
            <value>
                <fullName>General Inquiry</fullName>
            </value>
            <value>
                <fullName>Patient Education</fullName>
            </value>
            <value>
                <fullName>Supplier Certifications</fullName>
            </value>
            <value>
                <fullName>Website Support</fullName>
            </value>
            <value>
                <fullName>Accounts - Receivable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>