force-app/main/default/objects/Lead/fields/ASC_Owner__c.field-meta.xml
<CustomField>
    <fullName>ASC_Owner__c</fullName>
    <description>Own an operational ASC?</description>
    <label>ASC Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>In-progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>