force-app/main/default/objects/Lead/fields/ASC_Status__c.field-meta.xml
<CustomField>
    <fullName>ASC_Status__c</fullName>
    <description>Please explain: e.g. looking for partners / under construction.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ASC Status</label>
    <type>TextArea</type>
</CustomField>