force-app/main/default/objects/Lead/fields/ASC_Structure__c.field-meta.xml
<CustomField>
    <fullName>ASC_Structure__c</fullName>
    <description>Surgeon owned / Management company</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ASC Structure</label>
    <type>TextArea</type>
</CustomField>