force-app/main/default/objects/Lead/fields/ASC_User__c.field-meta.xml
<CustomField>
    <fullName>ASC_User__c</fullName>
    <description>Currently doing joint replacement procedures in an ASC?</description>
    <label>ASC User</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>