force-app/main/default/objects/Lead/fields/Attendee_Type__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Type__c</fullName>
    <label>Attendee Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AAOS Candidate Member</fullName>
            </value>
            <value>
                <fullName>AAOS Fellow</fullName>
            </value>
            <value>
                <fullName>AAOS Member</fullName>
            </value>
            <value>
                <fullName>AAOS Resident Mbr</fullName>
            </value>
            <value>
                <fullName>Allied Health</fullName>
            </value>
            <value>
                <fullName>Commercial Rep</fullName>
            </value>
            <value>
                <fullName>Exhibitor</fullName>
            </value>
            <value>
                <fullName>Homeosp Admin</fullName>
            </value>
            <value>
                <fullName>International Attendee</fullName>
            </value>
            <value>
                <fullName>International Member</fullName>
            </value>
            <value>
                <fullName>Participant MD</fullName>
            </value>
            <value>
                <fullName>Physician Non-Mbr</fullName>
            </value>
            <value>
                <fullName>Prog Participant--MD</fullName>
            </value>
            <value>
                <fullName>Program Participant</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>US Resdnt/Fellowship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>