force-app/main/default/objects/Lead/fields/Aware_Date__c.field-meta.xml
<CustomField>
    <fullName>Aware_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Aware Date</label>
    <type>DateTime</type>
</CustomField>