force-app/main/default/objects/Lead/fields/Campaign_Segment__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>