force-app/main/default/objects/Lead/fields/Captured_Downloaded_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Captured_Downloaded_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Captured/Downloaded Date &amp;Time</label>
    <type>DateTime</type>
</CustomField>