force-app/main/default/objects/Lead/fields/City3__c.field-meta.xml
<CustomField>
    <fullName>City3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>