force-app/main/default/objects/Lead/fields/Clinical_Trials_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trials_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clinical Trials Opt In</label>
    <type>Checkbox</type>
</CustomField>