force-app/main/default/objects/Lead/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>Updated via a workflow rule. Captures the date the Lead Status = Closed.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Updated via a workflow rule. Captures the date the Lead Status = Closed.</inlineHelpText>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>