force-app/main/default/objects/Lead/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bad fit</fullName>
            </value>
            <value>
                <fullName>Competitive takeover</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product Performance</fullName>
            </value>
            <value>
                <fullName>Marketing Issue</fullName>
            </value>
            <value>
                <fullName>Inventory Stocked</fullName>
            </value>
            <value>
                <fullName>Error/Not Valid</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>No Activity - 30 days</fullName>
                <label>No Activity - 45 days</label>
            </value>
            <value>
                <fullName>Bad timing</fullName>
                <isActive>false</isActive>
                <label>Bad timing</label>
            </value>
            <value>
                <fullName>Lost to competition</fullName>
                <isActive>false</isActive>
                <label>Lost to competition</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>