force-app/main/default/objects/Lead/fields/Co_Owner__c.field-meta.xml
<CustomField>
    <fullName>Co_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead Co-Owner</description>
    <label>Co-Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>