force-app/main/default/objects/Lead/fields/comment__c.field-meta.xml
<CustomField>
    <fullName>comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>comment</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>