force-app/main/default/objects/Lead/fields/comments__c.field-meta.xml
<CustomField>
    <fullName>comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>