force-app/main/default/objects/Lead/fields/Consideration_Date__c.field-meta.xml
<CustomField>
    <fullName>Consideration_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consideration Date</label>
    <type>DateTime</type>
</CustomField>