force-app/main/default/objects/Lead/fields/Consumer_Record_Type_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Record_Type_Indicator__c</fullName>
    <description>This is the field that identifies the Consumer Record Type. The value for consumer record type is &apos;1&apos; and is set up in the Web 2 Lead HTML file.</description>
    <label>Consumer Record Type Indicator</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>