force-app/main/default/objects/Lead/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <inlineHelpText>Will be populated only for Web form submissions</inlineHelpText>
    <label>Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>