force-app/main/default/objects/Lead/fields/Conversion_Type__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Type__c</fullName>
    <description>used to define type for your competitve conversion instruments</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competitive Conversion</fullName>
            </value>
            <value>
                <fullName>Loyal Customers</fullName>
            </value>
            <value>
                <fullName>Retained Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>