force-app/main/default/objects/Lead/fields/Corporate_Updates_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Updates_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporate Updates Opt In</label>
    <type>Checkbox</type>
</CustomField>