force-app/main/default/objects/Lead/fields/Date_of_Unsubscribe__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Unsubscribe__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Unsubscribe</label>
    <type>DateTime</type>
</CustomField>