force-app/main/default/objects/Lead/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Decision Date</label>
    <type>DateTime</type>
</CustomField>