force-app/main/default/objects/Lead/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>