force-app/main/default/objects/Lead/fields/Disqualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Disqualified Date</label>
    <type>DateTime</type>
</CustomField>