force-app/main/default/objects/Lead/fields/Distributorship__c.field-meta.xml
<CustomField>
    <fullName>Distributorship__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Distributorship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>