force-app/main/default/objects/Lead/fields/DN_Lead_Region_2__c.field-meta.xml
<CustomField>
    <fullName>DN_Lead_Region_2__c</fullName>
    <label>Lead Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>APL</fullName>
                <isActive>false</isActive>
                <label>APL</label>
            </value>
            <value>
                <fullName>Appalachian</fullName>
            </value>
            <value>
                <fullName>BUC</fullName>
                <isActive>false</isActive>
                <label>BUC</label>
            </value>
            <value>
                <fullName>Buckeye</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Capitol</fullName>
            </value>
            <value>
                <fullName>CB</fullName>
                <isActive>false</isActive>
                <label>CB</label>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Central Canada</fullName>
            </value>
            <value>
                <fullName>Chesapeake Bay</fullName>
            </value>
            <value>
                <fullName>CHI</fullName>
                <isActive>false</isActive>
                <label>CHI</label>
            </value>
            <value>
                <fullName>Chicago Land</fullName>
            </value>
            <value>
                <fullName>CP</fullName>
                <isActive>false</isActive>
                <label>CP</label>
            </value>
            <value>
                <fullName>CTL</fullName>
                <isActive>false</isActive>
                <label>CTL</label>
            </value>
            <value>
                <fullName>East Canada</fullName>
            </value>
            <value>
                <fullName>Garden State</fullName>
            </value>
            <value>
                <fullName>GG</fullName>
                <isActive>false</isActive>
                <label>GG</label>
            </value>
            <value>
                <fullName>GL</fullName>
                <isActive>false</isActive>
                <label>GL</label>
            </value>
            <value>
                <fullName>Golden Gate</fullName>
            </value>
            <value>
                <fullName>GRD</fullName>
                <isActive>false</isActive>
                <label>GRD</label>
            </value>
            <value>
                <fullName>Great Lakes</fullName>
            </value>
            <value>
                <fullName>Islands</fullName>
            </value>
            <value>
                <fullName>KEY</fullName>
                <isActive>false</isActive>
                <label>KEY</label>
            </value>
            <value>
                <fullName>Keystone</fullName>
            </value>
            <value>
                <fullName>LA</fullName>
                <isActive>false</isActive>
                <label>LA</label>
            </value>
            <value>
                <fullName>Lone Star</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>LS</fullName>
                <isActive>false</isActive>
                <label>LS</label>
            </value>
            <value>
                <fullName>Metro New York</fullName>
            </value>
            <value>
                <fullName>Mississippi Delta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>