force-app/main/default/objects/Lead/fields/DN_Lead_Region__c.field-meta.xml
<CustomField>
    <fullName>DN_Lead_Region__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>