force-app/main/default/objects/Lead/fields/DN_Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>DN_Lead_Type__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Adhoc</fullName>
            </value>
            <value>
                <fullName>Auto Assign</fullName>
            </value>
            <value>
                <fullName>PartnerZ</fullName>
            </value>
            <value>
                <fullName>ZBDandu</fullName>
                <isActive>false</isActive>
                <label>ZBDandu</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>