force-app/main/default/objects/Lead/fields/Do_Not_Sync__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Sync</label>
    <type>Checkbox</type>
</CustomField>