force-app/main/default/objects/Lead/fields/Do_you_want_to_be_contacted_by_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Do_you_want_to_be_contacted_by_Sales_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created for Zimmer.com Marketing sites</description>
    <label>Do you want to be contacted by Sales Rep</label>
    <type>Checkbox</type>
</CustomField>