force-app/main/default/objects/Lead/fields/Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Evaluation Date</label>
    <type>DateTime</type>
</CustomField>