force-app/main/default/objects/Lead/fields/Fellowship__c.field-meta.xml
<CustomField>
    <fullName>Fellowship__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fellowship</label>
    <type>TextArea</type>
</CustomField>