force-app/main/default/objects/Lead/fields/Fellowship_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_Completion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fellowship Completion Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>