force-app/main/default/objects/Lead/fields/Fellowship_hospital_year_completed__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_hospital_year_completed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fellowship (hospital/year completed)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>