force-app/main/default/objects/Lead/fields/Flow_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Flow_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if assignment is done via flow based on Zip codes</description>
    <label>Flow Assignment</label>
    <type>Checkbox</type>
</CustomField>