force-app/main/default/objects/Lead/fields/Flow_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Flow_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow Trigger</label>
    <type>Checkbox</type>
</CustomField>