force-app/main/default/objects/Lead/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assistant Surgeon</fullName>
            </value>
            <value>
                <fullName>Chief Surgeon</fullName>
            </value>
            <value>
                <fullName>Co. Chief Surgeon</fullName>
            </value>
            <value>
                <fullName>Deputy Chief Surgeon</fullName>
            </value>
            <value>
                <fullName>Deputy OP-Lead</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
            <value>
                <fullName>Head of Administration</fullName>
            </value>
            <value>
                <fullName>Head of Purchasing Department</fullName>
            </value>
            <value>
                <fullName>Leading Senior Surgeon</fullName>
            </value>
            <value>
                <fullName>Leading Surgeon</fullName>
            </value>
            <value>
                <fullName>Male OP Nurse</fullName>
            </value>
            <value>
                <fullName>Medical Director</fullName>
            </value>
            <value>
                <fullName>OP Nurse</fullName>
            </value>
            <value>
                <fullName>OP-Lead</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Purchasing Department</fullName>
            </value>
            <value>
                <fullName>Secretary</fullName>
            </value>
            <value>
                <fullName>Senior Assistant Surgeon</fullName>
            </value>
            <value>
                <fullName>Senior Surgeon</fullName>
            </value>
            <value>
                <fullName>Surgeon</fullName>
            </value>
            <value>
                <fullName>Technical Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>