force-app/main/default/objects/Lead/fields/GDPR_Consent_Data_Processing__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Consent_Data_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GDPR_Consent Data Processing</label>
    <type>Checkbox</type>
</CustomField>