force-app/main/default/objects/Lead/fields/GDPR_Consent_Data_Processing_Source__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Consent_Data_Processing_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GDPR_Consent Data Processing Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>