force-app/main/default/objects/Lead/fields/GDPR_Consent_Email_Double__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Consent_Email_Double__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GDPR_Consent Email Double</label>
    <type>Checkbox</type>
</CustomField>