force-app/main/default/objects/Lead/fields/GDPR_Consent_Opt_in_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Consent_Opt_in_TimeStamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GDPR_Consent Opt-in TimeStamp</label>
    <type>DateTime</type>
</CustomField>