force-app/main/default/objects/Lead/fields/Has_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Has_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Dental Campaign is selected on the Lead then this is TRUE</description>
    <label>Has Campaign</label>
    <type>Checkbox</type>
</CustomField>