force-app/main/default/objects/Lead/fields/HCP_Country_Access_Code_Lead__c.field-meta.xml
<CustomField>
    <fullName>HCP_Country_Access_Code_Lead__c</fullName>
    <formula>Country</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HCP Country Access Code Lead</label>
    <type>Text</type>
</CustomField>