force-app/main/default/objects/Lead/fields/HCP_Lead_source__c.field-meta.xml
<CustomField>
    <fullName>HCP_Lead_source__c</fullName>
    <description>This field is used to find source of lead generated by Web-To-Lead form.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>HCP Lead source</label>
    <length>20</length>
    <type>Text</type>
</CustomField>