force-app/main/default/objects/Lead/fields/Hospital_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Affiliation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hospital Affiliation</label>
    <type>TextArea</type>
</CustomField>