force-app/main/default/objects/Lead/fields/Hospital_City1__c.field-meta.xml
<CustomField>
    <fullName>Hospital_City1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hospital City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>