force-app/main/default/objects/Lead/fields/Hospital_Country1__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Country1__c</fullName>
    <label>Hospital Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>