force-app/main/default/objects/Lead/fields/Hospital_Name2__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Name2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hospital Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>